--- a/components/pages/ProgressBar/ProgressBar.module.scss
+++ b/components/pages/ProgressBar/ProgressBar.module.scss
@@ -66,9 +66,10 @@
 
 .progressContainer {
   position: relative;
-  width: 100%;
+  width: 907px;;
   height: 50px;
   overflow: hidden;
+
 }
 
 .baseimage {
