--- a/components/pages/Quiz/Quiz.module.scss
+++ b/components/pages/Quiz/Quiz.module.scss
@@ -11,7 +11,7 @@
   height: 100%;
   width: 100%;
   display: grid;
-  font-size: 24px;
+  font-size: 3em;
   justify-content: space-around;
   align-content: center;
 }
@@ -19,19 +19,19 @@
 .scoreText {
   color: #21262d;
   align-self: center;
-  margin-bottom: 20px;
+  margin-bottom: 2em;
 }
 
 .scoreButton {
-  width: 300px;
-  height: 120px;
-  font-size: 32px;
+  width: 12em;
+  height: 3em;
+  font-size: 1em;
   color: #21262d;
   background-color: #f0f5f9;
-  border-radius: 6px;
+  border-radius: 0.3em;
   border: none;
   cursor: pointer;
-  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0em 0.1em 0.2em 0em rgba(0, 0, 0, 0.4);
 }
 
 .score-button:active {
@@ -52,7 +52,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 14%;
-  font-size: 28px;
+  font-size: 3em;
 }
 .questionCategory {
   padding-top: 4%;
@@ -61,13 +61,13 @@
   font-weight: bold;
 }
 .questionCount {
-  margin-top: 10px;
-  font-size: 18px;
+  margin-top: 2em;
+  font-size: 0.55em;
   font-weight: bold;
 }
 
 .questionCount span {
-  font-size: 18px;
+  font-size: 1em;
   color: #21262d;
   font-weight: bold;
 }
@@ -75,24 +75,24 @@
 .questionText {
   margin-top: 6%;
   margin-bottom: 6%;
-  font-size: 48px;
+  font-size: 2em;
   color: #37b3f1;
 }
 
-.questionPicture {
-  margin-bottom: 12px;
-  width: 200px;
-  height: 150px;
-  object-fit: cover;
-  box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.75);
-}
+// .questionPicture {
+//   margin-bottom: 12px;
+//   width: 200px;
+//   height: 150px;
+//   object-fit: cover;
+//   box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.75);
+// }
 
 /* ANSWERS/RIGHT SECTION */
 .answerSection {
   display: grid;
-  grid-template-columns: repeat(2, 450px);
-  grid-gap: 48px;
-  gap: 48px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2em;
+  gap: 2em;
   justify-content: space-around;
   justify-items: center;
   padding-bottom: 6%;
@@ -102,23 +102,22 @@
 @media screen and (min-width: 321px) and (max-width: 1181px) {
   .question-section {
     padding-left: 6%;
-    font-size: 28px;
+    font-size: 2em;
   }
 }
 
 .btn {
-  width: 400px;
-  height: 160px;
-  font-size: 32px;
-  border-radius: 6px;
-  // justify-content: flex-start;
-  // align-items: center;
+  width: 12em;
+  height: 5em;
+  font-size: 3em;
+  border-radius: 0.3em;
+  display: flex;
+  align-items: center;
   border: none;
   cursor: pointer;
-  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0em 0.2em 0.2em 0em rgba(0, 0, 0, 0.4);
 
-  padding: 25px 80px;
-  margin: 15px 30px;
+  margin: 0.8em 0.8em;
 
   position: relative;
   -webkit-transition: all 0.3s;
@@ -143,7 +142,7 @@
 
 /* Icon separator */
 .btnSep {
-  padding: 25px 60px 25px 120px;
+  padding: 2em 2.5em 2em 2.5em;
 }
 
 .btnSep:before {
@@ -158,7 +157,7 @@
 
 .btnOne:active {
   background: #2980b9;
-  top: 2px;
+  top: 0.2em;
 }
 
 .btnOne:before {
