--- a/components/common/LastStep/LastStep.module.scss
+++ b/components/common/LastStep/LastStep.module.scss
@@ -2,7 +2,7 @@
 
 .page {
   width: 100vw;
-  height: 100svh;
+  height: 100vh;
   background-image: url("/images/guide_bg.png");
   background-size: cover;
   border: none;
@@ -14,7 +14,7 @@
   position: fixed;
   width: 50%;
   height: 30%;
-  top: 50px;
+  top: 5%;
   left: 5%;
   display: flex;
   flex-direction: column;
@@ -29,8 +29,8 @@
 }
 .textBack {
   z-index: 1;
-  font-size: 18px;
   font-weight: 700;
+  font-size: 26rem;
 }
 
 .textblock {
@@ -44,18 +44,16 @@
 }
 
 .text {
-  font-size: 52px;
+  font-size: 48rem;
   font-weight: 700;
-  line-height: 62px;
-  letter-spacing: 0em;
+  // line-height: 1.2rem;
   text-align: left;
 }
 
 .notion {
   color: rgba(255, 255, 255, 0.6);
-  font-size: 28px;
+  font-size: 32rem;
   font-weight: 400;
-  line-height: 30px;
   letter-spacing: 0em;
   text-align: left;
 }
@@ -64,7 +62,7 @@
   position: fixed;
   width: 35%;
   height: 30%;
-  top: 50px;
+  top: 5%;
   right: 5%;
 
   display: flex;
@@ -75,28 +73,28 @@
 
 .dataText {
   position: absolute;
-  font-size: 18px;
+  font-size: 26rem;
   font-weight: 700;
-  top: 20px;
-  left: 22px;
+  top: 14%;
+  left: 0;
 }
 
 .dataTitle {
-  font-size: 18px;
+  font-size: 26rem;
   font-weight: 700;
-  margin: 24px;
+  margin-bottom: 22rem;
 }
 
 .dataNumber {
-  font-size: 48px;
+  font-size: 48rem;
   font-weight: 700;
-  letter-spacing: 0em;
+  letter-spacing: 0rem;
 }
 
 .dataMeasure {
-  font-size: 18px;
+  font-size: 26rem;
   font-weight: 700;
-  margin: 24px;
+  margin: 12rem;
 }
 
 .ccal {
@@ -127,7 +125,7 @@
 }
 
 .img {
-  margin-top: 50px;
+  margin-top: 10%;
 }
 
 .bottom {
@@ -144,13 +142,12 @@
 .button {
   background-color: white;
   color: rgba(69.0625025331974, 153.3154347538948, 255, 1);
-  width: 290px;
-  height: 68px;
-  border-radius: 48px;
+  width: 28%;
+  border-radius: 36rem;
   border: none;
-  padding: 20px 64px 20px 64px;
+  padding: 22rem 2.2rem 22rem 2.2rem;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 26rem;
   cursor: pointer;
   transition: 0.25s;
 
