--- a/components/common/ProgressBar/ProgressBar.module.scss
+++ b/components/common/ProgressBar/ProgressBar.module.scss
@@ -2,7 +2,7 @@
 
 .page {
   width: 100vw;
-  height: 100svh;
+  height: 100vh;
   background-image: url("/images/progress_bg.png");
   background-size: cover;
   border: none;
@@ -23,26 +23,24 @@
   justify-content: center;
   box-sizing: border-box;
   flex-wrap: wrap;
-  gap: 44px;
+  gap: 60rem;
 }
 .title {
-  font-size: 112px;
+  font-size: 180rem;
   font-weight: 500;
-  line-height: 137px;
-  letter-spacing: 0px;
   text-align: center;
 }
+
 .text {
-  font-size: 32px;
+  font-size: 50rem;
   font-weight: 500;
-  line-height: 36px;
-  letter-spacing: 0em;
   text-align: center;
 }
+
 .fact {
-  width: 907px;
-  height: 68px;
-  border-radius: 4px;
+  width: 80%;
+  height: 10%;
+  border-radius: 8rem;
   color: white;
   background-color: rgba(69, 153, 255, 1);
 
@@ -50,11 +48,8 @@
   align-items: center;
   justify-content: center;
 
-  font-size: 24px;
+  font-size: 32rem;
   font-weight: 700;
-  line-height: 28px;
-  letter-spacing: 0em;
-  text-align: left;
 
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -66,10 +61,9 @@
 
 .progressContainer {
   position: relative;
-  width: 907px;;
-  height: 50px;
+  width: 80%;
+  height: 49px;
   overflow: hidden;
-
 }
 
 .baseimage {
@@ -91,4 +85,13 @@
   background-image: url("/images/progress_bar_blue.png"); 
   background-size: none;
   transition: width 0.3s ease-in-out;
+}
+
+.img{
+  position: fixed;
+  z-index: 1;
+  bottom: 0;
+  right: 0;
+  width: 900rem;
+  opacity: 0.5;
 }
