--- a/components/common/Cards/Cards.module.scss
+++ b/components/common/Cards/Cards.module.scss
@@ -61,7 +61,7 @@
 }
 .card {
   width: 32%;
-  height: 720rem;
+  height: 530px;
   border-radius: 2em;
   background-color: rgba(240, 245, 249, 1);
   display: flex;
