--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -14,60 +14,53 @@
   position: fixed;
   top: 5%;
   left: 5%;
-  width: 18%;
+  width: 14%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   cursor: pointer;
   transition: 0.25s;
-
-  &:hover {
-    color: white;
-  }
 }
 .textBack {
   z-index: 1;
   font-weight: 400;
-  font-size: 26rem;
+  font-size: 22rem;
 }
 
 .notification {
   position: fixed;
-  top: 4%;
-  left: 35%;
-  right: 35%;
-  height: 10%;
-  border-radius: 12rem;
-  background-color: white;
-  color: black;
+  top: 22%;
+  left: 9%;
+  width: 80%;
+  height: 12%;
+  color: white;
   font-weight: 600;
   font-size: 16rem;
-
-  text-align: left;
-  padding: 1%;
-  padding-left: 5%;
-  box-shadow: 0 0 2% rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   z-index: 9999;
   transition: width 0.5s ease-in-out;
+  justify-content: space-evenly;
 }
 
 .notificationText {
-  color: gray;
-  font-weight: 400;
-  font-size: 18rem;
-  margin-top: 2%;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  font-size: 32rem;
+  // margin-top: 2%;
 }
 
 .notificationImage {
-  position: absolute;
-  transform: translateX(-200%);
-  padding-top: 4%;
+  width: 50px;
+  height: 50px;
+  transition: width 0.5s ease-in-out;
 }
 
 .data {
   position: fixed;
-  top: 10%;
+  top: 15%;
   left: 10%;
   width: 80%;
   height: 50%;
@@ -79,7 +72,7 @@
 }
 
 .dataTitle {
-  font-size: 32rem;
+  font-size: 30rem;
   font-weight: 700;
   margin: 38rem;
 }
@@ -90,7 +83,7 @@
 }
 
 .dataMeasure {
-  font-size: 40rem;
+  font-size: 44rem;
   font-weight: 700;
   margin: 12rem;
 }
@@ -123,13 +116,13 @@
   justify-content: center;
   width: 50%;
   position: fixed;
-  left: 28.5%;
+  left: 28%;
   top: 40%;
 }
 
 .sunRays {
   position: relative;
-  width: 22%;
+  width: 17%;
   height: 60%;
 }
 
@@ -138,7 +131,7 @@
   width: 12%;
   height: 56rem;
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 6rem;
+  border-radius: 4rem;
   transform-origin: 50% 100%;
   transition: all 0.2s;
 }
@@ -148,7 +141,7 @@
 }
 
 .red {
-  background-color: red;
+  background-color: rgba(180, 47, 47, 1);
 }
 
 .progressContainer {
@@ -208,7 +201,7 @@
 }
 .textEnd {
   position: absolute;
-  right:3.2%;
+  right: 5%;
   bottom: 6.4%;
   width: 8%;
   font-weight: 500;
@@ -217,6 +210,7 @@
 }
 
 //Fact-Icons
+
 .factIcons {
   position: fixed;
   width: 70%;
@@ -228,6 +222,7 @@
 
   display: flex;
   flex-direction: row;
+  transition: all 0.5s ease-in-out;
 }
 
 .factIcon {
@@ -236,25 +231,39 @@
   top: 0;
   width: 50rem;
   height: 50rem;
-  transform: translateX(-50%);
-  transition: all 0.5s ease-in-out;
+  transform: translateX(-50%) translateY(200%);
+  transition: all 0.5s ease-in-out; 
 }
-
 .activeFact {
   position: absolute;
   min-width: 24%;
-  transform: translateX(-50%) translateY(200%);
-  transition: all 0.5s ease-in-out;
+  transform: translateX(-50%);
+  transition: all 0.5s ease-in-out; 
   cursor: pointer;
 }
 
-.factText {
-  position: relative;
-  top: -200%;
-  bottom: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  color: rgba(69, 153, 255, 1);
-  border-radius: 4rem;
+.factDiv {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
   padding: 6rem 6rem;
-  font-size: 20rem;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  transition: all 0.5s ease-in-out; 
+}
+
+.factImg {
+  width: 67px;
+  object-fit: cover;
+  padding: 6rem;
+  border-radius: 10px;
+  transition: all 0.5s ease-in-out; 
+}
+
+.factText {
+  color: rgb(69, 153, 255);
+  font-size: 18rem;
+  font-weight: 500;
+  transition: color 0.5s ease-in-out;
 }
