--- a/components/common/ProgressBar/ProgressBar.module.scss
+++ b/components/common/ProgressBar/ProgressBar.module.scss
@@ -3,20 +3,31 @@
 .page {
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/progress_bg.png");
-  background-size: cover;
-  border: none;
-  font-family: "ALS Hauss", sans-serif;
+  background: linear-gradient(
+    110deg,
+    rgba(0, 70, 154, 1),
+    rgba(183, 214, 251, 1)
+  );
+}
+
+.pageLayer {
+  bottom: 0%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url("/images/clouds.png");
 }
 
 .textblock {
   z-index: 2;
   color: rgb(0, 0, 0);
   position: fixed;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 75%;
+  top: 22%;
+  left: 20%;
+  width: 60%;
+  height: 54%;
+  background-color: white;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,42 +37,36 @@
   gap: 60rem;
 }
 .title {
-  font-size: 180rem;
-  font-weight: 500;
+  font-size: 80rem;
+  font-weight: 600;
   text-align: center;
 }
 
 .text {
-  font-size: 50rem;
-  font-weight: 500;
+  font-size: 30rem;
+  font-weight: 600;
   text-align: center;
 }
 
 .fact {
-  width: 80%;
+  width: 90%;
   height: 10%;
   border-radius: 8rem;
-  color: white;
-  background-color: rgba(69, 153, 255, 1);
-
+  color: rgb(69, 153, 255);
   display: flex;
   align-items: center;
-  justify-content: center;
-
-  font-size: 32rem;
-  font-weight: 700;
-
+  font-size: 30rem;
+  font-weight: 500;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
+  text-align: center;
 }
 
 .progressContainer {
   position: relative;
-  width: 80%;
+  width: 538px;
   height: 49px;
   overflow: hidden;
 }
@@ -70,28 +75,29 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 861px;
-  height: 100%;
+  width: 538px;
+  height: 28px;
   z-index: 1;
 }
 
 .overlayimage {
   position: absolute;
+  top: 0;
   left: 0;
   width: var(--progress-width);
-  height: 98%;
-  max-width: 100%;
+  max-width: 538px;
+  height: 28px;
   z-index: 2;
-  background-image: url("/images/progress_bar_blue.png"); 
-  background-size: none;
+  background-image: url('/images/progress_bar_blue2.png');
   transition: width 0.3s ease-in-out;
 }
 
-.img{
+.img {
   position: fixed;
   z-index: 1;
-  bottom: 0;
-  right: 0;
-  width: 900rem;
-  opacity: 0.5;
+  bottom: -47%;
+  left: 15%;
+  opacity: 0.7;
+  filter: saturate(40%) brightness(120%) contrast(100%) sepia(33%) hue-rotate(-20deg);
+  transform: scale(0.9);
 }
