--- a/components/common/LastStep/LastStep.module.scss
+++ b/components/common/LastStep/LastStep.module.scss
@@ -3,11 +3,19 @@
 .page {
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/guide_bg.png");
+  // background-image: url("/images/guide_bg.png");
   background-size: cover;
   border: none;
   font-family: "ALS Hauss", sans-serif;
   color: white;
+  pointer-events: none;
+}
+
+.canvasWrapper {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
 }
 
 .content {
@@ -133,6 +141,7 @@
   width: 90%;
   bottom: 7%;
   left: 5%;
+  pointer-events: all;
 
   display: flex;
   align-items: center;
