--- a/components/pages/Quiz/Quiz.module.scss
+++ b/components/pages/Quiz/Quiz.module.scss
@@ -1,10 +1,9 @@
 .app {
-  background-color: #252d4a;
-  background-image: url("/images/background.png");
-  background-size: cover;
+  background-color: #ffffff;
+
   width: 100vw;
   height: 100vh;
-  font-family: 'ALS Hauss', sans-serif
+  font-family: "ALS Hauss", sans-serif;
 }
 
 .scoreSection {
@@ -45,86 +44,108 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
 }
-.questionSection {
+
+.leftPart {
+  height: 100%;
+  width: 20%;
+  background: rgb(255, 255, 255);
+}
+
+.rightPart {
+  height: 100%;
+  width: 80%;
+  background-color: rgba(69, 153, 255, 1);
+
   display: flex;
   flex-direction: column;
-  padding-left: 14%;
   font-size: 3em;
 }
-.questionCategory {
-  padding-top: 4%;
-  color: #21262d;
 
-  font-weight: bold;
+.questionSection {
+  width: 85%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  margin-left: 5%;
+  margin-top: 3%;
+}
+
+.questionCategory {
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 500;
+  font-size: 34rem;
 }
 .questionCount {
-  margin-top: 2em;
-  font-size: 0.55em;
-  font-weight: bold;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 30rem;
 }
 
 .questionCount span {
-  font-size: 1em;
-  color: #21262d;
-  font-weight: bold;
+  color: rgba(255, 255, 255, 0.6);
+  font-weight: 400;
+  font-size: 30rem;
 }
 
 .questionText {
-  margin-top: 6%;
-  margin-bottom: 6%;
-  font-size: 2em;
-  color: #37b3f1;
+  font-weight: 500;
+  font-size: 48rem;
+  color: #fff;
+
+  letter-spacing: -0.04em;
+  text-align: left;
 }
 
-// .questionPicture {
-//   margin-bottom: 12px;
-//   width: 200px;
-//   height: 150px;
-//   object-fit: cover;
-//   box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.75);
-// }
-
-/* ANSWERS/RIGHT SECTION */
+/* ANSWERS SECTION */
 .answerSection {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 2em;
-  gap: 2em;
-  justify-content: space-around;
+  width: 100%;
+  height: 60%;
+
+  display: flex;
+  flex-direction: column;
   justify-items: center;
-  padding-bottom: 6%;
+
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-
-@media screen and (min-width: 321px) and (max-width: 1181px) {
-  .question-section {
-    padding-left: 6%;
-    font-size: 2em;
-  }
+.answerBG {
+  position: absolute;
+  width: 55%;
+  right: -15%;
+  bottom: -20%;
+  mix-blend-mode: overlay;
+  opacity: 0.8;
 }
 
 .btn {
-  width: 12em;
-  height: 5em;
-  font-size: 3em;
-  border-radius: 0.3em;
+  width: 520px;
+  height: 104px;
+  font-size: 30rem;
+  border-radius: 10px;
+
+  color: rgba(69, 153, 255, 1);
+  font-weight: 600;
+  font-size: 36rem;
+  text-align: center;
+
   display: flex;
   align-items: center;
+  justify-content: center;
   border: none;
   cursor: pointer;
-  box-shadow: 0em 0.2em 0.2em 0em rgba(0, 0, 0, 0.4);
-
-  margin: 0.8em 0.8em;
 
   position: relative;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
 }
-
 
 .btn:after {
   position: absolute;
@@ -142,7 +163,7 @@
 
 /* Icon separator */
 .btnSep {
-  padding: 2em 2.5em 2em 2.5em;
+  padding: 2rem 2.5rem 2rem 2.5rem;
 }
 
 .btnSep:before {
@@ -151,13 +172,13 @@
 
 /* Button 1 */
 .btnOne {
-  background: #0072bb;
-  color: #fff;
+  background: #ffffff;
+  color: rgba(69, 153, 255, 1);
 }
 
 .btnOne:active {
   background: #2980b9;
-  top: 0.2em;
+  top: 2rem;
 }
 
 .btnOne:before {
@@ -165,4 +186,61 @@
   height: 100%;
   left: 0;
   top: 0;
+}
+
+/* ANSWERS/RIGHT SECTION */
+.aiSection {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.aiZig {
+  width: 85%;
+  height: 40%;
+  padding-left: 5%;
+}
+
+.aiChat {
+  width: 184px;
+  height: 184px;
+  background-image: url("/images/aiChat.gif");
+  background-size: 100%;
+  mix-blend-mode: multiply;
+}
+
+.speechBubble {
+  position: absolute;
+  font-family: sans-serif;
+  font-size: 18rem;
+  font-weight: 500;
+  line-height: 24rem;
+  width: 340px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 12px;
+  text-align: center;
+  color: rgb(69, 153, 255);
+  right: 9%;
+  bottom: 5%;
+  z-index: 2;
+}
+
+.speechBubble:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-top: 19px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 10px solid #fff;
+  border-left: 18px solid transparent;
+  right: -25px;
+  top: 60%;
+  transform: translateY(-50%) scaleX(-1);
 }
