added phares change and changed poin icon movement

--- a/components/common/OnWay/OnWay.module.scss
+++ b/components/common/OnWay/OnWay.module.scss
@@ -182,12 +182,12 @@
 
 .icon {
   position: absolute;
-  margin-top: 0.1%;
+  margin-top: var(--y-position);
   width: 60rem;
   height: 60rem;
   z-index: 3;
   transform: translateX(-50%);
-  transition: all 0.5s ease-in-out;
+  transition: all 0.25s ease-out;
 }
 
 .textStart {
@@ -203,7 +203,7 @@
   position: absolute;
   right: 5%;
   bottom: 6.4%;
-  width: 8%;
+  width: 10%;
   font-weight: 500;
   font-size: 24rem;
   text-align: center;
@@ -232,13 +232,13 @@
   width: 50rem;
   height: 50rem;
   transform: translateX(-50%) translateY(200%);
-  transition: all 0.5s ease-in-out; 
+  transition: all 0.5s ease-in-out;
 }
 .activeFact {
   position: absolute;
   min-width: 24%;
   transform: translateX(-50%);
-  transition: all 0.5s ease-in-out; 
+  transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
 
@@ -250,7 +250,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  transition: all 0.5s ease-in-out; 
+  transition: all 0.5s ease-in-out;
 }
 
 .factImg {
@@ -258,7 +258,7 @@
   object-fit: cover;
   padding: 6rem;
   border-radius: 10px;
-  transition: all 0.5s ease-in-out; 
+  transition: all 0.5s ease-in-out;
 }
 
 .factText {
