--- a/components/common/Cards/Cards.module.scss
+++ b/components/common/Cards/Cards.module.scss
@@ -10,14 +10,14 @@
   width: 100vw;
   height: 100vh;
   position: absolute;
-  background-image: url("/images/clouds.png");
+  background-image: url("/images/background/clouds.png");
 }
 .navigationBack {
   color: white;
   position: fixed;
   top: 5%;
   left: 5%;
-  width: 11%;
+  width: 180rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -120,5 +120,4 @@
   position: absolute;
   bottom: 5%;
   z-index: 2;
-  margin-left: -1.5%;
 }
