--- a/components/common/Hero/Hero.module.scss
+++ b/components/common/Hero/Hero.module.scss
@@ -2,7 +2,7 @@
 .page {
   width: 100vw;
   height: 100vh;
-  background-image: url("/images/guide_bg_with_clouds.png");
+  background-image: url("/images/background/guide_bg_with_clouds.png");
   background-size: cover;
   border: none;
   font-family: "ALS Hauss", sans-serif;
@@ -12,10 +12,10 @@
   z-index: 2;
   color: white;
   position: fixed;
-  top: 5%;
+  top: 5rem;
   left: 5%;
-  width: 75%;
-  height: 50%;
+  width: 1200rem;
+  height: 600rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
