--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,3 +85,65 @@ body {
   width: 100%;
   min-height: 100vh;
 }
+
+.base-timer {
+  position: relative;
+  width: 206rem;
+  height: 206rem;
+  color: black;
+}
+
+.base-timer__svg {
+  transform: scaleX(-1);
+}
+
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 5rem;
+  stroke: rgba(189, 189, 189, 1);
+}
+
+.base-timer__path-remaining {
+  stroke-width: 5rem;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+  color: orange;
+}
+
+.base-timer__path-remaining.red {
+  color: red;
+}
+
+.time {
+  font-size: 20rem;
+  line-height: 22rem;
+  font-weight: 500;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 206rem;
+  height: 206rem;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 32rem;
+  line-height: 36rem;
+}
