--- a/components/common/Hero/Hero.module.scss
+++ b/components/common/Hero/Hero.module.scss
@@ -53,26 +53,23 @@
 }
 
 .imgContainer {
-  position: absolute;
-  width: 1280px;
-  height: 800px;
-  left: 0;
-  top: 0;
-  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+ 
 }
 
 .img0{
   position: absolute;
-  bottom: 5%;
-  left: 5%;
+  right: 0;
+  bottom: 0;
   z-index: 1;
   overflow: hidden;
 }
 
 .img1 {
   position: absolute;
-  bottom: 0%;
-  right: 0%;
+
   z-index: 1;
   max-width: 55%;
   overflow: hidden;
