--- a/components/common/QuizCards/Cards.module.scss
+++ b/components/common/QuizCards/Cards.module.scss
@@ -1,33 +1,42 @@
 @import "styles/mixins";
 
-.page {
+.root {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  // align-items: center;
+  justify-content: center;
   background: linear-gradient(rgba(0, 70, 154, 1), rgba(183, 214, 251, 1));
 }
 
-.pageLayer {
+.wrapper {
+  margin-top: 64rem;
+  max-width: 1350rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  // padding: 64rem;
+}
+
+.backImg {
   width: 100vw;
   height: 100vh;
+  position: absolute;
   background-image: url("/images/background/clouds.png");
   background-size: cover;
+  z-index: 0;
 }
 .navigationBack {
   color: white;
-  position: fixed;
-  top: 5%;
-  left: 5%;
-  width: 200rem;
+  width: 214rem;
+  height: 48rem;
+  gap: 12rem;
+  border-radius: 10rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-
+  justify-content: center;
   background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 8rem;
-  padding: 10rem;
-
   cursor: pointer;
-  transition: 0.25s;
 }
 .textBack {
   z-index: 1;
@@ -36,70 +45,69 @@
   line-height: 30rem;
 }
 
-.textblock {
-  color: white;
-  position: fixed;
-  top: 11%;
-  left: 5%;
+.arrow {
+  margin-bottom: 8rem;
 }
 
+.textblock {
+  color: white;
+  margin-top: 28rem;
+}
 .title {
   font-weight: 700;
-  font-size: 80rem;
+  font-size: 52rem;
   text-align: left;
   vertical-align: top;
-  line-height: 98rem;
+  line-height: 52rem;
   letter-spacing: 0.02rem;
 }
 .text {
+  margin-top: 4rem;
   font-weight: 500;
   font-size: 36rem;
   vertical-align: top;
-  line-height: 56rem;
+  line-height: 36rem;
   text-align: left;
   color: rgba(240, 245, 249, 0.6);
 }
 
-.cards {
-  position: fixed;
-  top: 30%;
-  left: 5%;
+.cardsWrapper {
+  width: 100%;
   border: none;
-
   display: flex;
+  margin-top: 24rem;
   color: white;
-  width: calc(100% - 5% * 2);
   justify-content: space-between;
 }
 
 .card {
-  width: 360rem;
-  height: 500rem;
+  width: 305rem;
+  height: 520rem;
   border-radius: 1em;
   background-color: rgb(240, 245, 249);
   display: flex;
-  flex-wrap: wrap;
-  transition: all 0.3s ease-in-out;
+  position: relative;
+
 }
 
-.clickedCard {
-  background: linear-gradient(
-    159.2deg,
-    #3f96ff 1.78%,
-    #125ab1 63.86%,
-    #125ab1 92.48%
-  );
-  transition: all 0.3s ease-in-out;
-  .cardpreTitle {
-    color: white;
-  }
-  .cardTitle {
-    color: white;
-  }
-  .cardText {
-    color: white;
-  }
-}
+// .clickedCard {
+//   background: linear-gradient(
+//     159.2deg,
+//     #3f96ff 1.78%,
+//     #125ab1 63.86%,
+//     #125ab1 92.48%
+//   );
+//   transition: all 0.3s ease-in-out;
+//   .cardpreTitle {
+//     color: white;
+//   }
+//   .cardTitle {
+//     color: white;
+//   }
+//   .cardText {
+//     color: white;
+//   }
+// }
 .cardLink {
   cursor: pointer;
 }
@@ -107,87 +115,91 @@
 .cardTextBlock {
   display: flex;
   flex-direction: column;
-  height: 50%;
-  margin-top: 5%;
-  justify-content: space-between;
   align-items: flex-start;
-  margin: 20rem;
-  text-align: left;
+  padding: 24rem;
+  position: relative;
 }
 
 .cardpreTitle {
   color: rgba(0, 0, 0, 0.555);
-  font-size: 20rem;
+  font-size: 16rem;
   font-weight: 500;
 }
 .cardTitle {
+  margin-top: 8rem;
   color: black;
-  font-size: 48rem;
+  font-size: 40rem;
   font-weight: 500;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.02em;
 }
 
 .cardText {
+  position: absolute;
+  top: 160rem;
   color: rgba(69, 153, 255, 1);
-  font-size: 22rem;
   font-weight: 500;
-  line-height: 26rem;
+  margin-top: 24rem;
+  max-width: 240rem;
+  font-size: 16rem;
+  line-height: 16rem;
   letter-spacing: 0em;
-  width: 90%;
   z-index: 2;
 }
+
 .cardPic {
   z-index: 1;
-  position: relative;
-  bottom: 87rem;
+  position: absolute;
+  bottom: -170rem;
+  left: -40rem;
+  width: 500rem;
 }
 
-/* AI */
-.aiSection {
-  width: 100%;
-  height: 15%;
-  position: absolute;
-  bottom: 30rem;
-}
+// /* AI */
+// .aiSection {
+//   width: 100%;
+//   height: 15%;
+//   position: absolute;
+//   bottom: 30rem;
+// }
 
-.aiChat {
-  width: 184px;
-  height: 184px;
-  background-image: url("/images/aiChat.gif");
-  background-size: 100%;
-  position: absolute;
-  margin-top: 20rem;
-  right: 0;
-  mix-blend-mode: multiply;
-}
+// .aiChat {
+//   width: 184px;
+//   height: 184px;
+//   background-image: url("/images/aiChat.gif");
+//   background-size: 100%;
+//   position: absolute;
+//   margin-top: 20rem;
+//   right: 0;
+//   mix-blend-mode: multiply;
+// }
 
-.speechBubble {
-  position: absolute;
-  font-family: sans-serif;
-  font-size: 18rem;
-  font-weight: 500;
-  line-height: 24rem;
-  width: 340px;
-  background: #fff;
-  border-radius: 10px;
-  padding: 12px;
-  text-align: center;
-  color: rgb(69, 153, 255);
-  right: 9%;
-  bottom: 5%;
-  z-index: 2;
-}
+// .speechBubble {
+//   position: absolute;
+//   font-family: sans-serif;
+//   font-size: 18rem;
+//   font-weight: 500;
+//   line-height: 24rem;
+//   width: 340px;
+//   background: #fff;
+//   border-radius: 10px;
+//   padding: 12px;
+//   text-align: center;
+//   color: rgb(69, 153, 255);
+//   right: 9%;
+//   bottom: 5%;
+//   z-index: 2;
+// }
 
-.speechBubble:before {
-  content: "";
-  width: 0px;
-  height: 0px;
-  position: absolute;
-  border-top: 19px solid transparent;
-  border-bottom: 10px solid transparent;
-  border-right: 10px solid #fff;
-  border-left: 18px solid transparent;
-  right: -25px;
-  top: 60%;
-  transform: translateY(-50%) scaleX(-1);
-}
+// .speechBubble:before {
+//   content: "";
+//   width: 0px;
+//   height: 0px;
+//   position: absolute;
+//   border-top: 19px solid transparent;
+//   border-bottom: 10px solid transparent;
+//   border-right: 10px solid #fff;
+//   border-left: 18px solid transparent;
+//   right: -25px;
+//   top: 60%;
+//   transform: translateY(-50%) scaleX(-1);
+// }
