--- a/components/common/QuizRules/QuizRules.module.scss
+++ b/components/common/QuizRules/QuizRules.module.scss
@@ -4,21 +4,21 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  // align-items: center;
   justify-content: center;
   background: linear-gradient(rgba(0, 70, 154, 1), rgba(183, 214, 251, 1));
 }
 
 .wrapper {
   margin-top: 64rem;
+  margin-bottom: 100rem;
   max-width: 1350rem;
   display: flex;
   flex-direction: column;
   width: 100%;
-  // padding: 64rem;
+  z-index: 1;
 }
 
-.backImg {
+.clouds {
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -26,27 +26,26 @@
   background-size: cover;
   z-index: 0;
 }
-.navigationBack {
+
+.backBtn {
   color: white;
   width: 214rem;
   height: 48rem;
   gap: 12rem;
+  border: none;
   border-radius: 10rem;
+
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.2);
   cursor: pointer;
 }
-.textBack {
+.backText {
   z-index: 1;
   font-weight: 400;
   font-size: 22rem;
-  line-height: 30rem;
-}
-
-.arrow {
-  margin-bottom: 8rem;
+  // line-height: 30rem;
 }
 
 .textblock {
@@ -60,74 +59,44 @@
   vertical-align: top;
   line-height: 52rem;
   letter-spacing: 0.02rem;
+  margin-bottom: 20rem;
 }
 .text {
-  margin-top: 4rem;
-  font-weight: 500;
-  font-size: 36rem;
-  vertical-align: top;
+  top: 20rem;
+  font-weight: 400;
+  font-size: 24rem;
   line-height: 36rem;
   text-align: left;
-  color: rgba(240, 245, 249, 0.6);
+  color: rgba(240, 245, 249, 1);
 }
 
 .cardsWrapper {
   width: 100%;
   border: none;
   display: flex;
-  margin-top: 24rem;
+  margin-top: 50rem;
   color: white;
   justify-content: space-between;
 }
 
 .card {
   width: 305rem;
-  height: 520rem;
+  height: 305rem;
   border-radius: 1em;
-  background-color: rgb(240, 245, 249);
+  background-color: rgba(255, 255, 255, 0.2);
   display: flex;
   position: relative;
-
-}
-
-// .clickedCard {
-//   background: linear-gradient(
-//     159.2deg,
-//     #3f96ff 1.78%,
-//     #125ab1 63.86%,
-//     #125ab1 92.48%
-//   );
-//   transition: all 0.3s ease-in-out;
-//   .cardpreTitle {
-//     color: white;
-//   }
-//   .cardTitle {
-//     color: white;
-//   }
-//   .cardText {
-//     color: white;
-//   }
-// }
-.cardLink {
-  cursor: pointer;
 }
 
 .cardTextBlock {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 24rem;
+  padding: 22rem;
   position: relative;
 }
 
-.cardpreTitle {
-  color: rgba(0, 0, 0, 0.555);
-  font-size: 16rem;
-  font-weight: 500;
-}
 .cardTitle {
-  margin-top: 8rem;
-  color: black;
   font-size: 40rem;
   font-weight: 500;
   letter-spacing: -0.02em;
@@ -143,33 +112,46 @@
   font-size: 16rem;
   line-height: 16rem;
   letter-spacing: 0em;
-  z-index: 2;
+
 }
 
 .cardPic {
   z-index: 1;
   position: absolute;
-  bottom: -170rem;
-  left: -40rem;
-  width: 500rem;
+  bottom: -135rem;
+  left: -30rem;
+  width: 390rem;
+}
+
+
+.playBtn {
+  background-color: white;
+  color: var(--light-blue);
+  width: 400rem;
+  border-radius: 100px;
+  border: none;
+  padding: 20rem 65rem 20rem 64rem;
+  font-weight: 700;
+  font-size: 24rem;
+  z-index: 1;
+  margin-top: 100rem;
+
+  &:hover {
+    color: white;
+    background-color: var(--light-blue);
+  }
 }
 
 // /* AI */
-// .aiSection {
-//   width: 100%;
-//   height: 15%;
-//   position: absolute;
-//   bottom: 30rem;
-// }
 
 // .aiChat {
 //   width: 184px;
 //   height: 184px;
-//   background-image: url("/images/aiChat.gif");
+//   background-image: url('/images/aiChat.gif');
 //   background-size: 100%;
 //   position: absolute;
-//   margin-top: 20rem;
-//   right: 0;
+//   bottom: -1rem;
+//   right: 64rem;
 //   mix-blend-mode: multiply;
 // }
 
@@ -179,13 +161,13 @@
 //   font-size: 18rem;
 //   font-weight: 500;
 //   line-height: 24rem;
-//   width: 340px;
+//   width: 340rem;
 //   background: #fff;
 //   border-radius: 10px;
-//   padding: 12px;
+//   padding: 24rem;
 //   text-align: center;
 //   color: rgb(69, 153, 255);
-//   right: 9%;
+//   right: 200rem;
 //   bottom: 5%;
 //   z-index: 2;
 // }
