--- a/components/common/ProgressBar/ProgressBar.module.scss
+++ b/components/common/ProgressBar/ProgressBar.module.scss
@@ -3,6 +3,7 @@
 .page {
   width: 100vw;
   height: 100vh;
+  position: absolute;
   background: linear-gradient(
     110deg,
     rgba(0, 70, 154, 1),
@@ -16,46 +17,76 @@
   height: 100%;
   position: absolute;
   background-image: url("/images/background/clouds.png");
+  background-size: cover;
+}
+
+.root {
+  width: 100%;
+  height: 100vh;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.imgWrapper{
+  position: absolute;
+}
+
+.img {
+  position: fixed;
+  z-index: 1;
+  top: -260rem;
+  left: 235rem;
+  opacity: 0.7;
+  filter: saturate(40%) brightness(120%) contrast(100%) sepia(33%) hue-rotate(-20deg);
+  transform: scale(0.9);
 }
 
 .textblock {
   z-index: 2;
+  width: 70%;
+  position: relative;
+  height: 450rem;
   color: rgb(0, 0, 0);
-  position: fixed;
-  top: 22%;
-  left: 20%;
-  width: 60%;
-  height: 54%;
   background-color: white;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  margin-top: 60rem;
   align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-  flex-wrap: wrap;
-  gap: 60rem;
+  // justify-content: center;
+  // gap: 30rem;
 }
 .title {
-  font-size: 80rem;
+  font-size: 50rem;
+  margin-top: 80rem;
   font-weight: 600;
   text-align: center;
 }
 
 .text {
-  font-size: 30rem;
+  font-size: 26rem;
   font-weight: 600;
   text-align: center;
+  margin-top: 20rem;
 }
 
 .fact {
+  position: absolute;
+  bottom: 80rem;
   width: 90%;
-  height: 10%;
   border-radius: 8rem;
   color: rgb(69, 153, 255);
   display: flex;
+  text-align: center;
+  justify-content: center;
   align-items: center;
-  font-size: 30rem;
+  font-size: 25rem;
   font-weight: 500;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -65,25 +96,32 @@
 }
 
 .progressContainer {
-  position: relative;
-  width: 538px;
-  height: 49px;
-  overflow: hidden;
+  margin-top:30rem;
 }
 
 .baseimage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 538px;
-  height: 28px;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%,-50%);
   z-index: 1;
+}
+
+.imgWrapper {
+  width: 100%;
+  height: 100vh;
+}
+
+.progressContainer {
+  position: relative;
 }
 
 .overlayimage {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
+
   width: var(--progress-width);
   max-width: 538px;
   height: 28px;
@@ -92,12 +130,4 @@
   transition: width 0.3s ease-in-out;
 }
 
-.img {
-  position: fixed;
-  z-index: 1;
-  bottom: -47%;
-  left: 15%;
-  opacity: 0.7;
-  filter: saturate(40%) brightness(120%) contrast(100%) sepia(33%) hue-rotate(-20deg);
-  transform: scale(0.9);
-}
+
